add sass mas meta

--- a/expo.html
+++ b/expo.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Expo</title>
+    <meta name="description" content="Lider en organizador en eventos sociales>
+    <meta name="keywords" content="fiestas, 15-años, casamientos, novias, bat, salones, quinceañeras">
+
     <link rel="stylesheet" href="./css/expo-style.css">
 </head>
 <body>
@@ -30,8 +34,9 @@
 
 </header>
 
-
+<div class="videoExpo">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/8cVv54p0Pu0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et praesentium qui aspernatur incidunt sunt eligendi earum corporis soluta deserunt voluptates. Adipisci tempora non odio accusantium corporis eos cum, commodi nam!</p>
     
