--- a/foto.html
+++ b/foto.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Foto y Video</title>
+    <meta name="description" content="Lider en organizador en eventos sociales>
+    <meta name="keywords" content="fiestas, 15-años, casamientos, novias, bat, salones, quinceañeras">
+
     <link rel="stylesheet" href="./css/fotovideo-style.css">
    
 </head>
