--- a/shows.html
+++ b/shows.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Shows y Servicios</title>
+    <meta name="description" content="Lider en organizador en eventos sociales>
+    <meta name="keywords" content="fiestas, 15-años, casamientos, novias, bat, salones, quinceañeras">
+
+
     <link rel="stylesheet" href="./css/shows-style.css">
 </head>
 <body>
