--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="./css/prueba.css">
+  <link rel="stylesheet" href="./sass/main.css">
 
 <head>
-  <link rel="icon" href="./imagenes/logo.jpg">
-  <title>Infinity Eventos</title>
+
+    <link rel="icon" href="./imagenes/logo.jpg">
+
+    <title>Infinity Eventos</title>
+    <meta name="description" content="Lider en organizador en eventos sociales>
+    <meta name="keywords" content="fiestas, 15-años, casamientos, novias, bat, salones, quinceañeras">
+
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" >
       <div class="container-fluid">
@@ -58,7 +63,7 @@
     </div>
   </div>
 
-  <div class="container text-black bg-light" >    
+  <div class="container text-white bg-dark" >    
       <p>
       Sabemos que la fiesta que estás soñando es muy importante para vos, ya que en esa noche compartirás con sus seres queridos uno de los momentos mas felices de tu vida. Somos expertos en la realización de fiestas de 15… Confía en Infinity eventos para que tu fiesta sea única e inolvidable!
        </p>
