--- a/expo.html
+++ b/expo.html
@@ -38,7 +38,10 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/8cVv54p0Pu0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et praesentium qui aspernatur incidunt sunt eligendi earum corporis soluta deserunt voluptates. Adipisci tempora non odio accusantium corporis eos cum, commodi nam!</p>
+    <p> EXPO INFINITY 2022
+        Nuestra Expo Infinity es el momento para que vos y tu familia puedan “palpitar” tu esperado evento con los mejores preveedores , shows en vivo, vestidos maquillajes, foto y video y muchísimas cosa más para que tu fiesta sea única e inolvidable 
+        
+        A continuación te mostramos un resumen de nuestra última Expo, mientras planificamos la próxima edición que se realizará en el mes de Abril de 2024</p>
     
 </body>
 </html>
