--- a/foto.html
+++ b/foto.html
@@ -57,7 +57,8 @@
 
 
 
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet quas blanditiis ea aperiam alias obcaecati dicta, neque ab voluptatibus ipsam. Optio temporibus voluptatum accusamus, deleniti eaque nostrum quaerat cum ullam, corporis aperiam totam fuga tempore ad, voluptate quo neque quod voluptas nobis ipsam! Nihil voluptate maxime veritatis, temporibus non doloremque odit at amet praesentium beatae itaque optio laudantium, eum commodi maiores distinctio quidem neque aperiam asperiores! Fugiat distinctio quia quasi quae impedit aspernatur repudiandae rerum quis aut tempora, unde sunt soluta veritatis ratione totam? Perferendis, sapiente ut soluta maxime laudantium, omnis ratione saepe explicabo vel blanditiis, mollitia odio laboriosam tenetur.</p>
+<p> Nuestros estudios fotograficos ofrecen distintas opciones para que tu cumpleaños o boda queden registradas a una excelente calidad. Estos mismos estudios cuentan con la experiencia y tecnologia de alto nivel para garantizar el exito de la misma
+</p>
 
 
     
