--- a/shows.html
+++ b/shows.html
@@ -52,6 +52,9 @@
 
     </div>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime sed ex mollitia impedit facere debitis, dolorum dicta, eveniet, totam ea non enim quasi? Atque temporibus culpa aut maxime ex deserunt, nobis vel unde exercitationem veniam aspernatur velit quis nemo repellat! Quidem in beatae a itaque dolorem ducimus nesciunt officia est nam pariatur, debitis quibusdam! Voluptatum impedit, cumque fuga ipsum sunt illum eveniet iste laudantium officiis sequi in quam nostrum? Omnis non harum excepturi magni nam ipsa officiis aspernatur rem quae error, cupiditate cum et nulla quis, suscipit reiciendis dolorum doloremque atque officia molestias reprehenderit corrupti nostrum eos aliquid. Voluptatum, amet.</p>
+    <p> Shows
+        PRODUCCIONES
+        Nuestra productora de eventos te ofrece los mejores shows y distintos entretenimientos para sorprender a todos tus invitados, poniendo a tu fiesta en otro nivel!
+    </p>
 </body>
 </html>
