--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./pruebaSalones.html">Salones</a>
+                <a class="nav-link active" aria-current="page" href="./pages/pruebaSalones.html">Salones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./shows.html">Shows y Servicios</a>
+                <a class="nav-link" href="./pages/shows.html">Shows y Servicios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./foto.html">foto y video</a>
+                <a class="nav-link" href="./pages/foto.html">foto y video</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./expo.html">expo</a>
+                <a class="nav-link" href="./pages/expo.html">expo</a>
               </li>
             </ul>
           </div>
