add estudios foto

--- a/pages/foto.html
+++ b/pages/foto.html
@@ -52,12 +52,12 @@
 <main>
     
         <div class="containerImg">
-            <img src="../imgPE/margus.png" alt="" class="">  
-            <img src="../imgPE/34.png" alt="" class="">
-            <img src="../imgPE/estudio v.jpg" alt="" class="">         
-            <img src="../imgPE/34.png" alt="" class="">
-            <img src="../imgPE/estudio v.jpg" alt="" class="">
-            <img src="../imgPE/margus.png" alt="" class="">         
+            <img src="../imgPE/margus.png" alt="estudio1" class="">  
+            <img src="../imgPE/34.png" alt="" class="estudio2">
+            <img src="../imgPE/estudio v.jpg" alt="estudio3" class="">         
+            <img src="../imgPE/fiodal.jpg" alt="estudio4" class="">
+            <img src="../imgPE/infocus (1).jpg" alt="estudio5" class="">
+            <img src="../imgPE/lumina.jpg" alt="estudio6" class="">         
         </div>
 </main>
 
