--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
       <div class="carousel-item active">
-          <img src="./imgPE/d2023.jpg" class="d-block w-100" alt="foyo1">
+          <img src="./imgPE/d2023.jpg" class="d-block w-100" alt="foto1">
       </div>
       <div class="carousel-item">
           <img src="./imgPE/DES1.jpg" class="d-block w-100" alt="foto2">
